<resources>
    <string name="app_name">Asistente de Fitness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1940500389421579</string>
    <string name="fb_login_protocol_scheme">fb1940500389421579</string>
    <string name="menu_home">Mis rutinas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="usuario">Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="not_firebase_with">Error de inicio de sesión</string>
    <string name="iniciaSesion">Inicia sesión para continuar:</string>
    <string name="misRutinas">Mis rutinas</string>
    <string name="Qr">Qr</string>
    <string name="fragment_qr">fragment_qr</string>
    <string name="BotonQr">BotonQr</string>
    <string name="FitnessApp">FitnessApp</string>
    <string name="Cronometro">Cronometro</string>
    <string name="title_activity_gimnasios">Map</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="discoverable">Discoverable</string>
    <string name="get_paired_devices">Get Paired Devices</string>
    <string name="todo">TODO</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
</resources>